<resources>
    <string name="app_name">YourAppName</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="view_dashboard">View Dashboard</string>
    <string name="loading">Loading...</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password_optional">Enter password (optional)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="default_temperature_value">N/A</string>
    <string name="default_timestamp">Last updated: N/A</string>
    <string name="default_energy_value">N/A</string>
    <string name="select_panel_id">Select Panel ID</string>
    <string name="select_sensor">Select Sensor</string>
    <string name="select_time_range">Select Time Range</string>
    <string name="data">Data</string>
    <string name="not_available_short">N/A</string>
    <string name="welcome_header_content_description">Welcome header</string>
    <string name="temperature_icon_content_description">Temperature icon</string>
    <string name="temperature_value_content_description">Temperature value</string>
    <string name="temperature_timestamp_content_description">Temperature timestamp</string>
    <string name="temperature_status_content_description">Temperature status</string>
    <string name="energy_icon_content_description">Energy icon</string>
    <string name="energy_value_content_description">Energy value</string>
    <string name="energy_timestamp_content_description">Energy timestamp</string>
    <string name="dashboard_header_content_description">Dashboard header</string>
    <string name="data_icon_content_description">Data icon</string>
    <string name="chart_title">Chart title</string>
    <string name="data_over_time_content_description">Data over time</string>

    <string name="welcome_user">Welcome!</string>
    <string name="welcome_user_format">Welcome, %s</string>
    <string name="your_solar_panels">Your Solar Panels</string>
    <string name="no_panels_yet_add_one_below">No solar panels yet. Add one below!</string>
    <string name="add_new_solar_panel">Add New Solar Panel</string>
    <string name="panel_id_template">ID: %s</string>
    <string name="panel_options_menu">Panel options</string>
    <string name="view_dashboard_action">View Dashboard</string>
    <string name="edit_panel_action">Edit Panel</string>
    <string name="delete_panel_action">Delete Panel</string>
    <string name="delete_panel_confirmation_title">Delete Panel</string>
    <string name="delete_panel_confirmation_message">Are you sure you want to delete panel \"%1$s\"? This action cannot be undone.</string>
    <string name="delete_action">Delete</string>
    <string name="cancel_action">Cancel</string>
    <string name="panel_deleted_successfully">Panel \"%1$s\" deleted successfully.</string>
    <string name="error_loading_panels">Error loading panels.</string>
    <string name="solar_panel_icon">Solar panel icon</string>

    <string name="edit_panel_title_format">Edit: %s</string>
    <string name="editing_panel_format">Editing Panel: %s</string>
    <string name="sensors_for_this_panel">Sensors</string>
    <string name="no_sensors_for_this_panel_add_one">No sensors for this panel. Add one below.</string>
    <string name="add_new_sensor">Add Sensor</string>
    <string name="sensor_type_format">%s Sensor</string>
    <string name="sensor_id_template">ID: %s</string>
    <string name="delete_sensor_button">Delete sensor</string>
    <string name="select_sensor_type_label">Select Sensor Type:</string>
    <string name="add_action">Add</string>
    <string name="add_new_sensor_title">Add New Sensor</string>
    <string name="sensor_added_successfully">Sensor added successfully.</string>
    <string name="delete_sensor_confirmation_title">Delete Sensor</string>
    <string name="delete_sensor_confirmation_message">Are you sure you want to delete %1$s (ID: %2$s)?</string>
    <string name="sensor_deleted_successfully">%1$s (ID: %2$s) deleted successfully.</string>
    <string name="error_loading_sensors">Error loading sensors.</string>
    <string name="sensor_icon">Sensor icon</string>
    <string name="panel_created_message">Panel created with ID: %1$d</string>
    <string name="sensor_added_message">Sensor added with ID: %1$d</string>

    <string name="no_panels_available">No Panels Available</string>
    <string name="please_add_a_solar_panel">Please add a solar panel.</string>
    <string name="no_sensors_title">No Sensors</string>
    <string name="please_add_sensors_to_panel">Please add sensors to this panel.</string>
    <string name="no_data_available">No Data Available</string>
    <string name="na_for_period">N/A for this period</string>
    <string name="sensor_error_title">Sensor Error</string>
    <string name="could_not_load_sensor_details">Could not load sensor details.</string>
    <string name="temperature_label_chart">Temperature</string>
    <string name="temperature_series_label">Temperature (°C)</string>
    <string name="avg_temp_summary">Avg Temp: %s°C</string>
    <string name="energy_production_label_chart">Energy Production</string>
    <string name="energy_series_label">Energy (kWh)</string>
    <string name="avg_energy_summary">Avg Energy: %s kWh</string>
    <string name="unknown_data_type_label">Unknown Data Type</string>
    <string name="na_generic">N/A</string>
    <string name="error_title">Error</string>
    <string name="could_not_load_data">Could not load data.</string>

    <string name="add_solar_panel_title">Add Solar Panel</string>
    <string name="panel_name_hint">Panel Name / Location</string>
    <string name="create_panel">Create Panel</string>
    <string name="panel_id_placeholder">Panel ID will appear here</string>
    <string name="add_sensor_title">Add Sensor to Panel</string>
    <string name="sensor_type_label">Sensor Type</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="sensor_id_placeholder">Sensor ID: %1$d. Now add sensors.</string>

    <string name="please_enter_panel_name">Please enter a panel name</string>
    <string name="panel_created_successfully_toast">Panel \"%1$s\" created. Now add sensors.</string>
    <string name="failed_to_create_panel_no_data">Failed to create panel: No data returned from server.</string>
    <string name="panel_name_updated_successfully">Panel name updated.</string>
    <string name="panel_name_cannot_be_empty">Panel name cannot be empty.</string>
    <string name="panel_name_not_changed">Panel name is the same.</string>
    <string name="invalid_sensor_type_selected">Invalid sensor type selected.</string>

    <string name="your_profile_header">Your Profile</string>
    <string name="edit_email_password">Edit Email/Password</string>
    <string name="logged_out_message">Logged out successfully.</string>
    <string name="delete_account_dialog_title">Delete Account</string>
    <string name="delete_account_dialog_message">Are you sure you want to delete your account? This action cannot be undone and all your data will be lost.</string>
    <string name="account_deleted_successfully">Account deleted successfully.</string>
    <string name="failed_to_load_data">Failed to load data.</string>
    <string name="session_expired_login_again">Session expired. Please log in again.</string>

    <string name="create_new_solar_panel_header">Create New Solar Panel</string>
    <string name="create_panel_and_continue">Create &amp; Edit Sensors</string>

    <string name="panel_name_location_label">Panel Name / Location</string>
    <string name="save_panel_name">Save Name</string>

</resources>
